📐 Add CSS for printers

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ryan Gilles - Développeur Full Stack Web/Back-End/Ops</title>
     <meta name="description" content="Mon C.V. de Développeur Full Stack Web/Back-End/Ops, en recherche active d'un poste en full remote ou hybride en Nouvelle Aquitaine, Bordeaux, La Rochelle, Saintes" />
+    <link href="css/print.css" media="print" rel="stylesheet" type="text/css">
   </head>
   <body>
     <div id="app" class="flex justify-center content-center"></div>
