📐 Add dark mode support

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Mon C.V. de Développeur Full Stack Web/Back-End/Ops, en recherche active d'un poste en full remote ou hybride en Nouvelle Aquitaine, Bordeaux, La Rochelle, Saintes" />
     <link href="/css/print.css" media="print" rel="stylesheet" type="text/css">
   </head>
-  <body>
+  <body class="bg-white text-black dark:bg-black dark:text-gray-100">
     <div id="app" class="flex justify-center content-center"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
